# polyconf

./: pyproject.toml
example/: basic.py
src/polyconf/: __init__.py
